wxc/include/ewxw/wxc_glue.h

/* wxIndividualLayoutConstraint */
TClassDefExtend(wxIndividualLayoutConstraint,wxObject)
void       wxIndividualLayoutConstraint_Above( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) sibling, int marg );
void       wxIndividualLayoutConstraint_Absolute( TSelf(wxIndividualLayoutConstraint) _obj, int val );
void       wxIndividualLayoutConstraint_AsIs( TSelf(wxIndividualLayoutConstraint) _obj );
void       wxIndividualLayoutConstraint_Below( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) sibling, int marg );
int        wxIndividualLayoutConstraint_GetDone( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetEdge( TSelf(wxIndividualLayoutConstraint) _obj, int which, void* thisWin, void* other );
int        wxIndividualLayoutConstraint_GetMargin( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetMyEdge( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetOtherEdge( TSelf(wxIndividualLayoutConstraint) _obj );
void*      wxIndividualLayoutConstraint_GetOtherWindow( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetPercent( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetRelationship( TSelf(wxIndividualLayoutConstraint) _obj );
int        wxIndividualLayoutConstraint_GetValue( TSelf(wxIndividualLayoutConstraint) _obj );
void       wxIndividualLayoutConstraint_LeftOf( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) sibling, int marg );
void       wxIndividualLayoutConstraint_PercentOf( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) otherW, int wh, int per );
int        wxIndividualLayoutConstraint_ResetIfWin( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) otherW );
void       wxIndividualLayoutConstraint_RightOf( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) sibling, int marg );
void       wxIndividualLayoutConstraint_SameAs( TSelf(wxIndividualLayoutConstraint) _obj, TClass(wxWindow) otherW, int edge, int marg );
int        wxIndividualLayoutConstraint_SatisfyConstraint( TSelf(wxIndividualLayoutConstraint) _obj, void* constraints, TClass(wxWindow) win );
void       wxIndividualLayoutConstraint_Set( TSelf(wxIndividualLayoutConstraint) _obj, int rel, TClass(wxWindow) otherW, int otherE, int val, int marg );
void       wxIndividualLayoutConstraint_SetDone( TSelf(wxIndividualLayoutConstraint) _obj, int d );
void       wxIndividualLayoutConstraint_SetEdge( TSelf(wxIndividualLayoutConstraint) _obj, int which );
void       wxIndividualLayoutConstraint_SetMargin( TSelf(wxIndividualLayoutConstraint) _obj, int m );
void       wxIndividualLayoutConstraint_SetRelationship( TSelf(wxIndividualLayoutConstraint) _obj, int r );
void       wxIndividualLayoutConstraint_SetValue( TSelf(wxIndividualLayoutConstraint) _obj, int v );
void       wxIndividualLayoutConstraint_Unconstrained( TSelf(wxIndividualLayoutConstraint) _obj );
/* wxLayoutConstraints */
TClassDefExtend(wxLayoutConstraints,wxObject)
TClass(wxLayoutConstraints) wxLayoutConstraints_Create(  );
void*      wxLayoutConstraints_bottom( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_centreX( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_centreY( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_height( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_left( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_right( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_top( TSelf(wxLayoutConstraints) _obj );
void*      wxLayoutConstraints_width( TSelf(wxLayoutConstraints) _obj );